--- a/styles/partials/_hourly-forecast.scss
+++ b/styles/partials/_hourly-forecast.scss
@@ -1,8 +1,56 @@
 .hourly-forecast {
+  border-bottom: rgba(255, 255, 255, 0.5) 1px solid;
+  padding: 10px;
   max-width: 100vw;
   overflow-x: scroll;
-   scrollbar-width: none;
+  scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
+  }
+
+  &__table {
+    & .now {
+      font-weight: 700;
+      text-align: center;
+    }
+    th {
+      font-weight: normal;
+      text-align: center;
+      font-size: 0.8em;
+    }
+    td {
+      /*   display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; */
+      text-align: center;
+      &.now.icon {
+        /*  padding-left: 5px; */
+      }
+    }
+    div {
+      text-align: center;
+      margin: 0;
+      max-width: 25px;
+    }
+    img {
+      display: block;
+
+      max-width: 25px;
+      max-height: 25px;
+      object-fit: cover;
+      transform: scale(1.5);
+      margin-right: 0;
+    }
+    .icon-09d,
+    .icon-09n,
+    .icon-10d,
+    .icon-10n,
+    .icon-11d,
+    .icon-11n {
+      margin-top: 5px;
+      max-width: 30px;
+      max-height: 50px;
+    }
   }
 }
