--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,7 +1,9 @@
+:root {
+  color: white;
+}
 * {
   box-sizing: border-box;
   font-family: "Noto Sans", sans-serif;
-  color: white;
 }
 html {
   max-height: 100vh;
@@ -10,20 +12,44 @@ html {
 
 body {
   overflow-x: hidden;
+  height: 100vh;
   max-height: 100vh;
   max-width: 100vw;
   padding: 0;
   margin: 0;
-  background: rgb(9, 9, 121);
-  background: linear-gradient(
-    0deg,
-    rgba(9, 9, 121, 1) 12%,
-    rgba(110, 231, 255, 1) 100%
-  );
+  background: #528dbf;
+  background: linear-gradient(to bottom, #2d91c2 0%, #1e528e 100%);
+  /*  background-image: linear-gradient(
+    to left bottom,
+    #528dbf,
+    #5993c2,
+    #6199c5,
+    #699fc7,
+    #71a5ca
+  ); */
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto 1fr auto;
+}
+
+header {
+  h1 {
+    line-height: 1;
+    font-size: 0.8rem;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 5px 0;
+    border-bottom: rgba(255, 255, 255, 0.5) 1px solid;
+  }
+}
+.main {
+  position: relative;
+}
+
+.hide {
+  display: none;
 }
