--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
 @import "./partials/main";
 @import "./partials/weather-info";
 @import "./partials/current-weather";
 @import "./partials/hourly-forecast";
+@import "./partials/daily-forecast";
+@import "./partials/search-position";
+@import "./partials/footer";
