--- a/styles/partials/_hourly-forecast.scss
+++ b/styles/partials/_hourly-forecast.scss
@@ -3,9 +3,49 @@
   padding: 10px;
   max-width: 100vw;
   overflow-x: scroll;
-  scrollbar-width: none;
+
   &::-webkit-scrollbar {
+    /* width: 0; */
     display: none;
+
+    @media (min-width: 600px) {
+      /* width: auto; */
+      display: block;
+      width: 5px;
+      height: 5px;
+      border-radius: 5px;
+    }
+  }
+  &::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    @media (min-width: 600px) {
+      background: white;
+      border-radius: 5px;
+    }
+  }
+  &::-webkit-scrollbar-track {
+    @media (min-width: 600px) {
+      background-color: rgba(255, 255, 255, 0.7);
+      border-radius: 5px;
+    }
+  }
+
+  &:hover {
+    &::-webkit-scrollbar {
+      display: block;
+      width: 5px;
+      height: 5px;
+      border-radius: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+      cursor: pointer;
+
+      background: white;
+      border-radius: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: rgba(255, 255, 255, 0.7);
+    }
   }
 
   &__table {
@@ -13,10 +53,14 @@
       font-weight: 700;
       text-align: center;
     }
+    tr {
+      padding: 1px 0;
+    }
     th {
       font-weight: normal;
       text-align: center;
       font-size: 0.8em;
+      padding-bottom: 5px;
     }
     td {
       /*   display: flex;
@@ -24,9 +68,10 @@
       justify-content: center;
       align-items: center; */
       text-align: center;
-      &.now.icon {
-        /*  padding-left: 5px; */
-      }
+      padding: 5px;
+      /*   &.now.icon {
+         padding-left: 5px;
+      } */
     }
     div {
       text-align: center;
