--- a/styles/partials/_daily-forecast.scss
+++ b/styles/partials/_daily-forecast.scss
@@ -11,7 +11,7 @@
   tr {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: 1fr 2fr 0.5fr 0.5fr;
+    grid-template-columns: 100px 2fr 0.5fr 0.5fr;
   }
   td {
     display: flex;
@@ -40,6 +40,9 @@
       &__max-temp,
       &__min-temp {
         justify-content: flex-end;
+      }
+      &__min-temp {
+        color: rgba(255, 255, 255, 0.7);
       }
     }
   }
