--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,5 +1,9 @@
 :root {
   color: white;
+  font-size: 16px;
+  @media (min-width: 600px) {
+    font-size: 25px;
+  }
 }
 * {
   box-sizing: border-box;
@@ -11,8 +15,14 @@ html {
 }
 
 body {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+
   overflow-x: hidden;
-  height: 100vh;
+  /*   height: 100vh; */
   max-height: 100vh;
   max-width: 100vw;
   padding: 0;
@@ -32,7 +42,12 @@ body {
   background-attachment: fixed;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 20px 1fr 65px;
+  row-gap: 5px;
+
+  @media (min-width: 600px) {
+    grid-template-rows: 20px 1fr 95px;
+  }
 }
 
 header {
@@ -46,10 +61,31 @@ header {
     border-bottom: rgba(255, 255, 255, 0.5) 1px solid;
   }
 }
+
 .main {
-  position: relative;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  @media (min-width: 1000px) {
+    max-width: 1000px;
+    margin: 0 auto 0 auto;
+  }
 }
 
 .hide {
   display: none;
+}
+.blur {
+  filter: blur(10px);
+}
+
+.fa,
+.fas,
+.fab,
+.far {
+  font-family: "FontAwesome" !important;
+  font-style: unset !important;
+  font-weight: 400 !important;
 }
